Fix scroll indicator overlapping issue

--- a/_sass/components/_stats-bar.scss
+++ b/_sass/components/_stats-bar.scss
@@ -4,6 +4,8 @@
   padding: 0.5rem 0;
   text-align: center;
   position: relative;
+  margin: 0 1rem;
+  border-radius: 1rem;
 }
 
 .stats-grid {
