--- a/_sass/layout/_hero.scss
+++ b/_sass/layout/_hero.scss
@@ -215,44 +215,7 @@
   }
 }
 
-// Scroll indicator
-.scroll-indicator {
-  position: absolute;
-  bottom: $space-8;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 2;
 
-  .scroll-arrow {
-    width: 24px;
-    height: 24px;
-    border: 2px solid $gray-400;
-    border-top: none;
-    border-right: none;
-    transform: rotate(-45deg);
-    animation: bounce 2s infinite;
-  }
-
-  .scroll-text {
-    font-size: $text-xs;
-    color: $gray-500;
-    margin-top: $space-2;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
-}
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateX(-50%) translateY(0) rotate(-45deg);
-  }
-  40% {
-    transform: translateX(-50%) translateY(-8px) rotate(-45deg);
-  }
-  60% {
-    transform: translateX(-50%) translateY(-4px) rotate(-45deg);
-  }
-}
 
 // Floating animation
 @keyframes float {
